"8th Push: Minor changes, fixed update for commas/newlines"